# canaimeAPI

./: .env.example  .gitignore  README.md  build_steps.sh  main.py  pyproject.toml  requirements.txt  vercel.json
api/: __init__.py  index.py
canaimeapi/: __init__.py  app.py  scheduler.py
canaimeapi/api/: __init__.py  auth.py  router.py
canaimeapi/scraper/: __init__.py  crawler.py
